# frequencia-palavra

./: README.md  esperanto.txt  frequencia.py  pyproject.toml
